--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.4.6",
+    "uikit": "^3.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
