Added track data to chart

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "uikit": "^3.4.6"
+    "uikit": "^3.4.6",
+    "victory": "^35.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
